eks-cluster-w-alb/manifests/alb-example/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: alb-example
spec:
  selector:
    matchLabels:
      app: echoserver
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - image: k8s.gcr.io/e2e-test-images/echoserver:2.5
        name: echoserver
        ports:
        - containerPort: 8080
