eks-cluster-w-alb/manifests/alb-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: alb-example
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: NodePort
  selector:
    app: echoserver
