eks-cluster-w-alb/manifests/alb-example/ingress.yaml
---
# applying this manifest will create an ALB on AWS and link it with the kubernetes ingress resource defined in this manifest
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: alb-example
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /echoserver
            pathType: Exact
            backend:
              service:
                name: echoserver
                port:
                  number: 80
      host: echo.devopsbyexample.io
